base/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: api-gateway
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: evote-env
            - secretRef:
                name: evote-secrets
          image: api-gateway
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8000/auth/health
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          name: api-gateway
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
