base/audit-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: audit-service
  name: audit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: audit-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: audit-service
    spec:
      containers:
        - args:
            - uvicorn
            - main:app
            - --host
            - 0.0.0.0
            - --port
            - "3003"
          image: ghcr.io/ricardoandaluzsinisterra/evote-audit-service:main-450f564
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:3003/health
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 5
          name: audit-service
          ports:
            - containerPort: 3003
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
