base/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: auth-service
    spec:
      containers:
        - args:
            - uvicorn
            - auth_service.main:app
            - --host
            - 0.0.0.0
            - --port
            - "3001"
          image: auth-service
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:3001/health
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 5
          name: auth-service
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
