base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: evote-env
            - secretRef:
                name: evote-secrets
          image: ghcr.io/ricardoandaluzsinisterra/evote-frontend:main-450f564
          name: react-frontend
          ports:
            - containerPort: 5173
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
