base/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: kafka
    spec:
      enableServiceLinks: false
      containers:
        - envFrom:
            - configMapRef:
                name: evote-env
            - secretRef:
                name: evote-secrets
          image: confluentinc/cp-kafka:7.4.0
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - kafka-topics --bootstrap-server localhost:9092 --list >/dev/null 2>&1 || exit 1
            initialDelaySeconds: 30
            failureThreshold: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: kafka
          ports:
            - containerPort: 9092
              protocol: TCP
            - containerPort: 29092
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
