base/on-prem-validator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: on-prem-validator
  name: on-prem-validator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: on-prem-validator
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: on-prem-validator
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: evote-env
            - secretRef:
                name: evote-secrets
          image: ghcr.io/ricardoandaluzsinisterra/evote-on-prem-validator:main-9e4abc0
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8000/openapi.json
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
          name: on-prem-validator
          ports:
            - containerPort: 8000
              protocol: TCP
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
