base/postgres-voting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
    kompose.version: 1.38.0 (HEAD)
  labels:
    io.kompose.service: postgres-voting
  name: postgres-voting
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-voting
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o /home/hojaldre/repos/E-Vote-GitOps/
        kompose.version: 1.38.0 (HEAD)
      labels:
        io.kompose.service: postgres-voting
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: evote-env
            - secretRef:
                name: evote-secrets
          image: postgres:17-alpine
          livenessProbe:
            exec:
              command:
                - pg_isready -U postgres -d voting_db
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 3
          name: postgres-voting
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-voting-data
            - mountPath: /docker-entrypoint-initdb.d/01-schema.sql
              name: postgres-voting-cm1
              readOnly: true
              subPath: 01-schema.sql
      imagePullSecrets:
        - name: ghcr-secret
      restartPolicy: Always
      volumes:
        - name: postgres-voting-data
          persistentVolumeClaim:
            claimName: postgres-voting-data
        - configMap:
            items:
              - key: postgres_voting.sql
                path: 01-schema.sql
            name: postgres-voting-cm1
          name: postgres-voting-cm1
