base/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    io.kompose.service: zookeeper
spec:
  selector:
    io.kompose.service: zookeeper
  ports:
    - name: client
      port: 2181
      targetPort: 2181
      protocol: TCP
  type: ClusterIP
